--- a/Sport-App/package.json
+++ b/Sport-App/package.json
@@ -8,6 +8,8 @@
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "node-bourbon": "^4.2.3",
+    "node-neat": "^1.7.2"
   }
 }
